# sac-sma

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  version.txt
ngen_files/: CMakeLists.txt  cat-27.csv  example_realization_w_pet_sac.json  sac-init-HHWM8.namelist.input
src/bmi/: Makefile  bmi_sac.f90
src/driver/: driver_bmi.f90
src/sac/: ex_sac1.f  ex_sac1.f90  sac1.f  sac1.f90  sac_data_mod.f90
src/share/: constants.f90  dateTimeUtilsModule.f90  derivedType.f90  forcingType.f90  ioModule.f90  modelVarType.f90  namelistModule.f90  nrtype.f90  parametersType.f90  runInfoType.f90  runSac.f90  sacLogger.f90
test_cases/: README.md
test_cases/ex1/input/forcing/: README.md  forcing.sacbmi.HHWM8IL.csv  forcing.sacbmi.HHWM8IL_ngen.csv  forcing.sacbmi.HHWM8IU.csv  forcing.sacbmi.rates.HHWM8IL.csv  forcing.sacbmi.rates.HHWM8IU.csv
test_cases/ex1/input/params/: sac_params.HHWM8.txt
test_cases/ex1/output/: output.sacbmi.HHWM8.txt  output.sacbmi.HHWM8IL.txt  output.sacbmi.HHWM8IU.txt
test_cases/ex1/run/: README.md  namelist.bmi.HHWM8
test_cases/ex1/state/: sac_states.HHWM8IL.txt  sac_states.HHWM8IU.txt
test_cases/unit_test/: Makefile  README.md  sac_driver_test.f90
